# automaestro

./: .dockerignore  .env.example  .env_example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 1072eee61acc_first_migration.py  690a1ced5164_add_models.py  ab564ef13364_first_migration.py  ad167da99f1a_first_migrations.py  b106f06982ad_first_migration.py  fe1ffdff296a_first_migrations.py
app/: __main__.py
app/bot/: bot.py  dp.py  main.py
app/bot/handlers/: admin.py  start.py
app/bot/keyboards/inline/: base.py  employee.py  poll.py  user.py
app/bot/middlewares/: chat_type.py  database.py  employee.py  lang.py
app/bot/scenes/: __init__.py  mixins.py  poll.py  register.py  start.py  user.py
app/bot/scenes/employee/: main.py  main_menu.py  profile.py  register.py  work.py
app/bot/scenes/user/: estimations.py  main.py  main_menu.py  (+4 more)
app/bot/utils/: callback_data.py  enums.py
app/core/: config.py  constants.py  logger.py  paths.py
app/database/: setup.py
app/database/models/: __init__.py  base.py  car.py  mixins.py  poll.py  user.py  visit.py
app/database/repo/: base.py  car.py  employee.py  poll.py  requests.py  user.py  visit.py
app/resources/locales/: ru.ftl
app/services/: fluent.py
app/services/tasks/: apps.py  messages.py
app/utils/: enums.py  gen_qrcode.py  send_message.py  speech_to_text.py
app/web/: app.py
app/web/api/: routers.py  utils.py  validators.py
app/web/middlewares/: telegram.py
app/web/templates/: index.html
scripts/: alembic.sh
(+24 files in other folders)
