[tool.poetry]
name = "automaestro"
version = "0.1.0"
description = ""
authors = ["Расим Шаймарданов <shaimardanoff92@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
aiogram = "^3.7.0"
sqlalchemy = "^2.0.30"
sqlalchemy-file = "^0.6.0"
alembic = "^1.13.1"
fluentogram = "^1.1.7"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.3"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
